--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.1",
     "react": "^19.0.0",
