--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.14.0",
+    "react-quill-new": "^3.3.3",
     "sonner": "^1.7.1",
     "zod": "^3.24.1"
   },
